# horus

./: .gitignore  LICENCE  LICENSE  README.md  index.html  package-lock.json  package.json
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: database.py  main.py
apps/api/app/models/: base.py  image.py
apps/web/: README.md  package-lock.json  package.json  vite.config.ts
assets/: index-BI9h7iLJ.js
infra/docker/: docker-compose.yml
infra/nginx/: nginx.conf
