[project]
name = "api"
version = "0.1.0"
description = "Backend API for Horus, an intelligent aerial image analysis platform for dengue breeding site detection."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "albumentations>=2.0.8",
    "fastapi>=0.137.0",
    "geopandas>=1.1.3",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rasterio>=1.5.0",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.50",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "ultralytics>=8.4.67",
    "uvicorn>=0.49.0",
]
